# get-papers-list

./: README.md  ai.csv  papers.csv  pyproject.toml
src/papers/: __init__.py  client.py  exporter.py  filters.py  models.py
