[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "CLI tool to fetch filtered PubMed papers"
authors = ["monisha1000 <rajanamonisha3525@gmail.com>"]
readme = "README.md"
packages = [
    { include = "papers", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.4"
pandas = "^2.3.1"
typer = { extras = ["all"], version = "^0.16.0" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"

[tool.poetry.scripts]
get-papers-list = "papers.main:app"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
